--- a/src/components/Form/form.scss
+++ b/src/components/Form/form.scss
@@ -3,16 +3,38 @@
   justify-content: center;
   margin-top: 32px;
 
+  @media screen and (max-width: 768px) {
+    margin-top: 48px;
+  }
+
+  .input-panel {
+    display: flex;
+    flex-direction: row;
+
+    @media screen and (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding: 5px;
+    }
+  }
+
   input {
     padding: 10px 15px;
     border-radius: 4px;
-    border: 1px solid rgba(1,1,1,0.3);
+    border: 1px solid rgba(1, 1, 1, 0.3);
     margin-right: 5px;
     width: 250px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+      "Helvetica Neue", sans-serif;
     font-size: 16px;
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      margin: 0 0 6px 0;
+      box-sizing: border-box;
+    }
   }
 
   button {
@@ -27,6 +49,11 @@
 
     &:hover {
       background: #1474d2;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      height: 43px;
     }
   }
 }
