--- a/src/components/List/list.scss
+++ b/src/components/List/list.scss
@@ -1,6 +1,8 @@
+@use "../../styles/fonts";
+
 .todo-list {
   padding: 10px 0;
-  border-bottom: 1px solid rgba(1,1,1,0.1);
+  border-bottom: 1px solid rgba(1, 1, 1, 0.1);
 
   &-title {
     font-weight: 500;
@@ -8,15 +10,23 @@
     text-transform: uppercase;
     text-align: center;
     display: block;
-    border-bottom: 1px solid rgba(1,1,1,0.1);
+    border-bottom: 1px solid rgba(1, 1, 1, 0.1);
     padding: 12px 0;
     margin-bottom: 10px;
+
+    @media screen and (max-width: 768px) {
+      font-size: fonts.$headlineSize;
+    }
   }
 
   &-content {
     display: flex;
     justify-content: center;
     flex-direction: column;
+
+    @media screen and (max-width: 768px) {
+      padding: 0 1.5rem;
+    }
   }
 }
 
